--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,18 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-html, body {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
-}
-
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
-}
-
-main > h1 {
+body {
+  font-family: Arial, sans-serif;
   text-align: center;
-  font-size: 3.5em;
+  margin: 20px;
+  background-color: #f4f4f9;
+}
+
+h1 {
+  color: #333;
+}
+
+section {
+  margin: 20px 0;
+}
+
+ul {
+  list-style-type: none;
 }
